working on UFO2

--- a/UFO-level-2/index2.html
+++ b/UFO-level-2/index2.html
@@ -36,24 +36,49 @@
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
-                        <input class="form-date" id="datetime" type="text" placeholder="ALL">
+                          <select id="selectDate">
+                              <!-- <option>date 1</option> -->
+                              <!-- <option>date 2</option> -->
+                              <!-- <option>date 3</option> -->
+                            </select>
+                        <!-- <label for="date">Enter a Date</label>
+                        <input class="form-date" id="datetime" type="text" placeholder="ALL"> -->
                       </li>
                       <li class="filter list-group-item">
-                        <label for="date">Enter a City</label>
-                        <input class="form-city" id="city" type="text" placeholder="ALL">
+                          <select id="selCitySet">
+                              <option>city 1</option>
+                              <option>city 2</option>
+                              <option>city 3</option>
+                            </select>
+                        <!-- <label for="date">Enter a City</label> -->
+                        <!-- <input class="form-city" id="city" type="text" placeholder="ALL"> -->
                       </li>
                       <li class="filter list-group-item">
-                        <label for="date">Enter a State</label>
-                        <input class="form-state" id="state" type="text" placeholder="ALL">
+                          <select id="selStateSet">
+                              <option>state 1</option>
+                              <option>state 2</option>
+                              <option>state 3</option>
+                              </select>
+                        <!-- <label for="date">Enter a State</label> -->
+                        <!-- <input class="form-state" id="state" type="text" placeholder="ALL"> -->
                       </li>
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Country</label>
-                        <input class="form-country" id="country" type="text" placeholder="ALL">
+                          <select id="selCountrySet">
+                              <option>country 1</option>
+                              <option>country 2</option>
+                              <option>country 3</option>
+                              </select>
+                        <!-- <label for="date">Enter a Country</label> -->
+                        <!-- <input class="form-country" id="country" type="text" placeholder="ALL"> -->
                       </li>
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Shape</label>
-                        <input class="form-shape" id="shape" type="text" placeholder="ALL">
+                          <select id="selShapeSet">
+                              <option>shape 1</option>
+                              <option>shape 2</option>
+                              <option>shape 3</option>
+                              </select>
+                        <!-- <label for="date">Enter a Shape</label> -->
+                        <!-- <input class="form-shape" id="shape" type="text" placeholder="ALL"> -->
                       </li>
                     </ul>
                     
