--- a/UFO-level-2/index2.html
+++ b/UFO-level-2/index2.html
@@ -63,7 +63,7 @@
                     </ul>
                     
                   </div>
-                  <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <button id="filter-btn" type="button" class="btn btn-default" onclick="myFunction()">Filter Table</button>
                 </form>
               </div>
             </div>
